--- a/projects/P02-VehiclesAPI/pricing-service/pom.xml
+++ b/projects/P02-VehiclesAPI/pricing-service/pom.xml
@@ -15,7 +15,7 @@
 	<description>Pricing Service</description>
 
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 	<dependencies>
@@ -28,6 +28,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.1.3.RELEASE</version>
 		</dependency>
 
 		<dependency>
