--- a/projects/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/projects/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#server.port=8082
+
+#Eureka
+spring.application.name=pricing-service
 server.port=8082
+eureka.client.serviceUrl.defaultZone=http://localhost:8080/eureka/
+eureka.client.service-url.default-zone=http://localhost:8080/eureka/
+instance.preferIpAddress=true
