--- a/projects/P02-VehiclesAPI/eureka/pom.xml
+++ b/projects/P02-VehiclesAPI/eureka/pom.xml
@@ -28,6 +28,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.4.0-b180725.0427</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
