--- a/projects/P02-VehiclesAPI/vehicles-api/pom.xml
+++ b/projects/P02-VehiclesAPI/vehicles-api/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
     <build>
