--- a/exercises/c3/c3_l1_exercise1/pom.xml
+++ b/exercises/c3/c3_l1_exercise1/pom.xml
@@ -44,11 +44,13 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<version>6.1.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.18</version>
 			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
