Test is not workign

--- a/exercises/c3/c3_l4_exercise10/src/main/resources/application.properties
+++ b/exercises/c3/c3_l4_exercise10/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.data.mongodb.uri=mongodb://course3:course3@localhost:27017/jdnd-c3
+logging.level.org.springframework.boot.autoconfigure.mongo.embedded=debug
+logging.level.org.mongodb=error
